# myutils

./: .gitignore  pyproject.toml
myutils/: download.py  fsinfo.py  fstime.py  lang.py  langutil.py  mem.py  strnorm.py  timeconv.py  timestat.py  timeterm.py  webutil.py
rc/: zshrc
tests/: test_fsinfo.py  test_import.py  test_lists.py  test_recentfiles.py  test_timestat.py
