[project]
name = "myutils"
version = "0.1.0"
description = ""
authors = [
    {name = "tgadf",email = "tgadfort@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "regex (>=2024.11.6,<2025.0.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "h5py (>=3.12.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
